--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,7 @@ title:               Lanyon
 tagline:             'A Jekyll theme'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 https://zadenya.github.io
-
-paginate_path: "/blog/page:num/"
+baseurl:             "/lanyon"
 paginate:            5
 
 # About/contact
